# cuda_template

./: CMakeLists.txt
cmake/: Install_glew.txt
include/: game_of_life.cuh
src/: game_of_life.cu  main.cpp
